<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright The OpenZipkin Authors
    SPDX-License-Identifier: Apache-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>io.zipkin.brave</groupId>
    <artifactId>brave-context-parent</artifactId>
    <version>6.0.4-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>brave-context-jfr</artifactId>
  <name>Brave Context: JDK Flight Recorder</name>

  <properties>
    <!-- Matches Export-Package in bnd.bnd -->
    <module.name>brave.context.jfr</module.name>

    <!-- JFR is JDK11+ -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>

    <main.basedir>${project.basedir}/../..</main.basedir>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration combine.self="append">
          <target>${main.java.version}</target>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.jfr</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
